extends Control


func _on_BixItch_pressed():
	OS.shell_open("https://n-thing.itch.io/")


func _on_ArgyuloYoutube_pressed():
	OS.shell_open("https://www.youtube.com/channel/UCGKIu73Jj18zQ_McGjCXgRA")


func _on_ColdItch_pressed():
	OS.shell_open("https://coldcalzone.itch.io/")


func _on_CraigItch_pressed():
	OS.shell_open("https://craigostrin.itch.io/")
